<resources>
    <string name="app_name">ATM Consultoria</string>
    <string name="empresa_detalhes">Sobre a Empresa</string>
    <string name="servicos_detalhes">Serviços</string>
    <string name="texto_consultoria">Consultoria</string>
    <string name="texto_processos">Processos</string>
    <string name="texto_acomp_projetos">Acompanhamento e projetos</string>
    <string name="cliente_detalhes">Nossos Clientes</string>
    <string name="texto_email">E-mail: consultoria@atm.com.br</string>
    <string name="texto_telefone">Telefone: (11) 3333-2222</string>
    <string name="texto_celular">Celular: (11) 9999-8888</string>
    <string name="detalhe_contato">Contato</string>
</resources>
